istio/samples/httpbin-ext/httpbin-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-ext
spec:
  hosts:
    - "httpbin.org"
  exportTo:
    - "."
  gateways:
    - gw
  http:
    - match:
        - uri:
            prefix: "/httpbin"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: httpbin.org
