istio/samples/httpbin-ext/svc-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin-ext
spec:
  hosts:
    - httpbin.org
  ports:
    - number: 80
      name: http
      protocol: HTTP
  exportTo:
    - "."
  location: MESH_EXTERNAL
  resolution: DNS
